--- a/contact-us.html
+++ b/contact-us.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
     <title>
-        Contact Us | R&S Flores Lawn Care | Austell, GA
+        Contact Us | R&S Flores Lawn Care | Lakeland, FL
     </title>
 
     <meta name="description"
-        content="Get in touch with R&S Flores Lawn Care LLC for expert lawn care and landscaping services in Austell, GA, and nearby areas.">
-    <meta name="keywords" content="contact us, lawn care services, landscaping, Austell, GA, professional services">
+        content="Get in touch with Lakeland, FL for expert lawn care and landscaping services in Lakeland, FL, and nearby areas.">
+    <meta name="keywords" content="contact us, lawn care services, landscaping, Lakeland, FL, professional services">
 
     <meta name="format-detection" content="telephone=no">
 
@@ -54,7 +54,7 @@
 
                     <div class="d-flex align-items-center gap-2">
                         <a title="R&S Flores Lawn Care Facebook Profile"
-                            href="https://www.facebook.com/p/RS-Flores-Lawn-Care-LLC-100069742615816/">
+                            href="https://www.facebook.com/landscapingfromthegroundupLLC/photos_by">
                             <i class="fa-brands fa-facebook fs-26 text-white"></i>
                         </a>
                           <a title="R&S Flores Lawn Care Gmail" href="mailto:rsflores86@gmail.com">
@@ -72,8 +72,8 @@
                         <p class="fs-19 fw-500 d-flex align-items-start gap-2">
                             <i class="fa-solid fa-location-dot fs-24 pt-1"></i>
                             <span>
-                                5740 South Gordon Rd. <br>
-                                Austell, GA 30168 <br>
+                                Lakeland, FL <br>
+                                Lakeland, FL 30168 <br>
                                 <a title="R&S Flores Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
                                     href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">Get
@@ -89,7 +89,7 @@
                     <div class="text-md-end">
                         <a class="phone fw-500 gap-2" title="phone number" href="tel:+14049748399">
                             <i class="fa-solid fa-phone-volume fs-24"></i>
-                            +1 (404) 974-8399
+                            +1 813-809-3317
                         </a>
                     </div>
                 </div>
@@ -186,7 +186,7 @@
             <div class="container hero-content">
 
                 <h1 class="text-center">
-                    Contact R&S Flores Lawn Care LLC
+                    Contact Lakeland, FL
                 </h1>
                 <!-- Call to Action Buttons -->
                 <div class="d-flex mt-lg-5 mt-4 justify-content-center">
@@ -194,7 +194,7 @@
                         <!-- Call Now Button -->
                         <a title="Call Now to Learn More"
                             class="btn btn-primary rounded-1 fs-19 text-uppercase px-5 fw-600 mb-sm-0 mb-4"
-                            href="tel:+14049748399">+1 (404) 974-8399</a>
+                            href="tel:+14049748399">+1 813-809-3317</a>
 
                         <!-- Secondary Button -->
 
@@ -206,7 +206,7 @@
 
 
         <!-- Background Image behind hero sections -->
-        <img class="hero-img" src="/img/checking-garden.png" alt="R&S Flores Lawn Services">
+        <img class="hero-img" src="/img/checking-garden.png" alt="Our Lawn Services">
     </section>
 
     <!-- Contact Information -->
@@ -221,8 +221,8 @@
                         <p class="unit"> <i class="fa-solid fa-location-dot me-3 fs-28 text-white"></i>
                             <span>
 
-                                5740 South Gordon Rd. <br>
-                                Austell, GA 30168<br>
+                                Lakeland, FL <br>
+                                Lakeland, FL 30168<br>
                                 <a title="Get RS Flores Directions" target="_blank"
                                     href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">
                                     Get Directions
@@ -234,12 +234,12 @@
                         <!-- Phone Number -->
                         <a title="Phone Number" class="unit" href="tel:+14049748399"> <i
                                 class="fa-solid fa-phone me-3 fs-28 text-white"></i>
-                            +1 (404) 974-8399
+                            +1 813-809-3317
                         </a>
 
                         <!-- Facebook -->
                         <a class="unit" title="R&S Flores  Facebook Navigation" class=" d-flex align-items-center"
-                            target="_blank" href="https://www.facebook.com/p/RS-Flores-Lawn-Care-LLC-100069742615816/">
+                            target="_blank" href="https://www.facebook.com/landscapingfromthegroundupLLC/photos_by">
                             <i class="fs-24 fa-brands fa-facebook fs-28 me-3 text-white"></i>
                             Facebook
                         </a>
@@ -284,8 +284,8 @@
                     <!-- Homepage Sections -->
                     <div class="footer-nav">
                         <p>
-                            5740 South Gordon Rd. <br>
-                            Austell, GA 30168
+                            Lakeland, FL <br>
+                            Lakeland, FL 30168
                             <br>
                             <a class="text-decoration-underline text-secondary" title="RS Flores Directions"
                                 target="_blank"
@@ -332,7 +332,7 @@
                         <!-- Phone Number -->
                         <p>
                             Main: <a class="text-white" title="Main R&S Flores Phone Number" href="tel:+14049748399">
-                                +1 (404) 974-8399</a>
+                                +1 813-809-3317</a>
                         </p>
 
                     </div>
