--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
     <title>
-        Trusted Lawn Care and Junk Removal Services in Austell, GA
+        Trusted Lawn Care and Junk Removal Services in Lakeland, FL
     </title>
 
     <meta name="description" content="">
@@ -53,7 +53,7 @@
 
                     <div class="d-flex align-items-center gap-2">
                         <a title="R&S Flores Lawn Care Facebook Profile"
-                            href="https://www.facebook.com/p/RS-Flores-Lawn-Care-LLC-100069742615816/">
+                            href="https://www.facebook.com/landscapingfromthegroundupLLC/photos_by">
                             <i class="fa-brands fa-facebook fs-26 text-white"></i>
                         </a>
                         <a title="R&S Flores Lawn Care Gmail" href="mailto:rsflores86@gmail.com">
@@ -71,8 +71,8 @@
                         <p class="fs-19 fw-500 d-flex align-items-start gap-2">
                             <i class="fa-solid fa-location-dot fs-24 pt-1"></i>
                             <span>
-                                5740 South Gordon Rd. <br>
-                                Austell, GA 30168 <br>
+                                Lakeland, FL <br>
+
                                 <a title="R&S Flores Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
                                     href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">Get
@@ -88,7 +88,7 @@
                     <div class="text-md-end">
                         <a class="phone fw-500 gap-2" title="phone number" href="tel:+14049748399">
                             <i class="fa-solid fa-phone-volume fs-24"></i>
-                            +1 (404) 974-8399
+                            +1 813-809-3317
                         </a>
                     </div>
                 </div>
@@ -192,8 +192,8 @@
                 </div>
 
                 <h1 class="text-center">
-                    Trusted <span class="text-primary">Lawn Care</span> & <span class="text-primary">Junk Removal</span>
-                    Services in Austell, GA
+                    Trusted <span class="text-primary">Lawn Care</span>
+                    Services in Lakeland, FL
                 </h1>
 
                 <!-- Hero Information -->
@@ -208,7 +208,7 @@
                         <!-- Call Now Button -->
                         <a title="Call Now to Learn More"
                             class="btn btn-primary rounded-1 fs-19 text-uppercase px-5 fw-600 mb-sm-0 mb-4"
-                            href="tel:+14049748399">+1 (404) 974-8399</a>
+                            href="tel:+14049748399">+1 813-809-3317</a>
 
                         <!-- Secondary Button -->
 
@@ -220,7 +220,7 @@
 
 
         <!-- Background Image behind hero sections -->
-        <img class="hero-img" src="/img/hero-main-img.jpg" alt="R&S Flores Lawn Services">
+        <img class="hero-img" src="/img/big-lawn.jpg" alt="Our Lawn Services">
     </section>
 
 
@@ -229,7 +229,7 @@
         <div class="ratings-grid mt-5 container">
             <!-- Facebook Rating -->
             <a class="ratings-card" title="R&S Flores Facebook Navigation" target="_blank"
-                href="https://www.facebook.com/p/RS-Flores-Lawn-Care-LLC-100069742615816/">
+                href="https://www.facebook.com/landscapingfromthegroundupLLC/photos_by">
                 <img src="/img/facebook.png" alt="R&S Flores facebook logo">
                 <p class="text-center ratings">
                     <i class="fa-solid fa-star"></i>
@@ -240,8 +240,7 @@
                 </p>
             </a>
             <!-- Google Rating -->
-            <a class="ratings-card" title="R&S Flores Google Navigation" target="_blank"
-                href="https://www.google.com/search?q=R%26S+Flores+Lawn+Care+LLC.&oq=R%26S+Flores+Lawn+Care+LLC.&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRigATIHCAMQIRiSAzIHCAQQIRiSAzIHCAUQIRiSAzIHCAYQIRiSAzIHCAcQIRiSAzIHCAgQIRiSA9IBBzM1OGowajSoAgCwAgA&sourceid=chrome&ie=UTF-8#lrd=0x16b1cfbca210293:0x2bbe154cb02a59d3,1,,,,">
+            <a class="ratings-card" title="R&S Flores Google Navigation" target="_blank" href="">
                 <img src="/img/google.png" alt="R&S Flores google logo">
                 <p class="text-center ratings">
                     <i class="fa-solid fa-star"></i>
@@ -252,8 +251,7 @@
                 </p>
             </a>
             <!-- Yelp Rating -->
-            <a class="ratings-card" title="R&S Flores Yelp Navigation"
-                href="">
+            <a class="ratings-card" title="R&S Flores Yelp Navigation" href="">
                 <img src="/img/yelp.png" alt="R&S Flores Yelp Logo">
                 <p class="text-center ratings">
                     <i class="fa-solid fa-star"></i>
@@ -272,24 +270,24 @@
             <div class="about-us-flex align-items-center">
                 <!-- Information Side -->
                 <div class="info-div">
-                    <p class="sub-header">Best in Austell, GA</p>
+                    <p class="sub-header">Best in Lakeland, FL</p>
                     <h2 class="header">
-                        <span class="text-primary"> Lawn Care </span> and <span class="text-primary">Junk Removal</span>
+                        <span class="text-primary"> Lawn Care </span>
                         Services that Make Your Home Shine
                     </h2>
                     <p class="mb-4">
 
-                        In Austell, GA, homeowners count on R&S Flores Lawn Care LLC for reliable and professional lawn
+                        In Lakeland, FL, homeowners count on Lakeland, FL for reliable and professional lawn
                         care
                         services. We're known for our commitment to quality and love for creating beautiful lawns that
                         make homeowners proud.
                         <br><br>
-                        At R&S Flores Lawn Care LLC, we know that a great lawn is essential for a happy home. That's why
+                        At Lakeland, FL, we know that a great lawn is essential for a happy home. That's why
                         we offer a range of services, like lawn mowing, tree trimming, mulching, pine straw
                         installation, and junk removal. Our team works hard to keep your lawn healthy and looking its
                         best, so you can relax and enjoy your outdoor space. Trust us for great service and results
                         you'll love. Give us a call at <a href="tel:+14049748399" class="text-decoration-underline"
-                            title="R&S Flores Contact Info">+1 (404) 974-8399</a> to see how we can help your lawn
+                            title="R&S Flores Contact Info">+1 813-809-3317</a> to see how we can help your lawn
                         thrive!
                     </p>
                     <a title="Call R&S Flores Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
@@ -300,7 +298,7 @@
 
                 <!-- Img Side -->
                 <div class="img-div top-right">
-                    <img style="object-position: top;" src="/img/about-us-1.jpg" alt="R&S Flores Lawn Services">
+                    <img style="object-position: top;" src="/img/about-us-1.jpg" alt="Our Lawn Services">
 
                     <!-- <div class="img-data data-bottom-left">
                         <p class=" highlight">Keith Dorr</p>
@@ -436,51 +434,59 @@
     <!-- Services End -->
 
 
-    <!-- About -->
-    <section id="about" class="about-us about-us-main light-section mt-5 pt-4" data-aos="fade-up">
+    <!-- About Us -->
+    <section class="two-col-info">
         <div class="container">
-            <div class="about-us-flex opposite align-items-center">
-                <!-- Information Side -->
+            <div class="flex">
+                <div class="img-div">
+                    <!-- <img class="main-img" style="transform: scaleX(-1);" src="/img/building-hvac.jpg" alt="Skyscraper"> -->
+                    <video muted loop autoplay playsinline>
+                        <source src="/img/lawn-video.mp4" type="video/mp4">
+                    </video>
+                </div>
                 <div class="info-div">
-                    <p class="sub-header">Commercial Services</p>
-                    <h2 class="header">
-                        Professional <span class="text-primary">Lawn Care For Businesses</span> in Austell, GA
-                    </h2>
-                    <p class="mb-4">
-                        For businesses in Austell, GA, R&S Flores Lawn Care LLC is the trusted partner for all
-                        commercial lawn care needs. With a reputation for excellence and a dedication to quality, we
-                        understand the importance of maintaining a professional and welcoming outdoor environment for
-                        your customers and employees.
-                        <br><br>
-                        At R&S Flores Lawn Care LLC, we offer a comprehensive range of commercial lawn services tailored
-                        to meet the unique needs of businesses. From regular lawn maintenance to specialized services
-                        such as tree trimming, mulching, and junk removal, our experienced team is equipped to keep your
-                        commercial property looking its best year-round. With prompt and reliable service, attention to
-                        detail, and a commitment to customer satisfaction, you can trust R&S Flores Lawn Care LLC to
-                        enhance the curb appeal and overall appearance of your business. Contact us today to learn more
-                        about our commercial lawn services and how we can help your business
-                        thrive.
+                    <p class="sub-header">
+                        Lawn care services
                     </p>
-                    <div class="d-flex gap-2 flex-wrap">
-                        <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600" href="tel:+14049748399">
-                            Call Now
-                        </a>
+                    <h3 class="title">
+                        <span class="text-secondary">Expert </span> Lawn Mowing and Maintenance
+                    </h3>
+                    <p class="mb-3">
+                        Discover professional care for your lawn with our expert services. We ensure your grass is
+                        perfectly trimmed and healthy year-round. From precise mowing to thorough maintenance, we take
+                        pride in delivering exceptional results. Trust us to keep your lawn looking its best with our
+                        reliable and affordable solutions.
+                    </p>
+                    <hr>
+                    <ul class="mb-4">
+                        <li>
+                            Precision Mowing
+                        </li>
+                        <li>
+                            Seasonal Maintenance
+                        </li>
+                        <li>
+                            Edging and Trimming
+                        </li>
+                        <li>
+                            Expert Advice
+                        </li>
+                    </ul>
 
-                        <a title="Commercial Services" class="btn btn-secondary rounded-1 px-5 fs-20 fw-600"
-                            href="/commercial-lawn-services-near-austell-ga.html">
-                            Learn More
+                    <div class="d-flex flex-wrap gap-2">
+                        <a title="Building Automation" class="btn btn-secondary fs-19 px-4" href="/contact.html">
+                            Schedule a Free Consultation
+                        </a>
+                        <a title="HVAC Service" class="btn btn-outline-secondary border-2 fs-19 px-5"
+                            href="/contact.html">
+                            Contact Us
                         </a>
                     </div>
-                </div>
-
-                <!-- Img Side -->
-                <div class="img-div bottom-right">
-                    <img style="object-position: center;" src="/img/commercial-lawn.jpg"
-                        alt="R&S Flores Commercial Lawn Service">
                 </div>
             </div>
         </div>
     </section>
+
 
     <!-- CTA Section -->
     <section class="cta primary-overlay">
@@ -488,7 +494,7 @@
         <div class="container" data-aos="fade-up">
             <!-- CTA Text -->
             <h4 class="text-center lh-100 text-capitalize">Your Perfect Lawn Is A Call Away. <br>
-                Call us at +1 (404) 974-8399
+                Call us at +1 813-809-3317
             </h4>
             <!-- CTA Button -->
             <div class="d-flex justify-content-center">
@@ -506,20 +512,20 @@
                 <div class="info-div">
                     <p class="sub-header">Residential Services</p>
                     <h2 class="header">
-                        Reliable <span class="text-primary">Lawn Care For Homeowners</span> in Austell, GA
+                        Reliable <span class="text-primary">Lawn Care For Homeowners</span> in Lakeland, FL
                     </h2>
                     <p class="mb-4">
 
-                        For homeowners in Austell, GA, R&S Flores Lawn Care LLC offers trusted residential lawn services
+                        For homeowners in Lakeland, FL, Lakeland, FL offers trusted residential lawn services
                         to ensure your outdoor space remains beautiful and well-maintained. With a focus on quality and
                         customer satisfaction, we're committed to transforming your yard into a lush oasis you can be
                         proud of.
                         <br><br>
-                        At R&S Flores Lawn Care LLC, we understand that your home is your sanctuary, and we treat it
+                        At Lakeland, FL, we understand that your home is your sanctuary, and we treat it
                         with the care and attention it deserves. From regular lawn mowing to specialized services like
                         tree trimming, mulching, and junk removal, our skilled team has the expertise and equipment to
                         keep your lawn looking its best year-round. With reliable service, attention to detail, and a
-                        passion for exceeding expectations, you can trust R&S Flores Lawn Care LLC to enhance the beauty
+                        passion for exceeding expectations, you can trust Lakeland, FL to enhance the beauty
                         and value of your home's outdoor space. Contact us today to schedule your
                         residential lawn services and experience the difference for yourself.
                     </p>
@@ -561,8 +567,8 @@
                 <!-- Cities List -->
                 <ul class="cities pb-4">
                     <li>
-                        <a title=" Austell, GA Lawn Services" href="/lawn-services-near-austell-ga.html">
-                            Austell, GA
+                        <a title=" Lakeland, FL Lawn Services" href="/lawn-services-near-austell-ga.html">
+                            Lakeland, FL
                         </a>
                     </li>
 
@@ -760,21 +766,21 @@
                         Your Trusted Cleanup Partner
                     </p>
                     <h2 class="header">
-                        Trusted <span class="text-primary">Junk Removal</span> Services in Austell, GA
+                        Trusted <span class="text-primary">Junk Removal</span> Services in Lakeland, FL
                     </h2>
                     <p class="mb-4">
-                        When it comes to junk removal services in Austell, GA, R&S Flores Lawn Care LLC is the name you
+                        When it comes to junk removal services in Lakeland, FL, Lakeland, FL is the name you
                         can trust for reliable and efficient solutions. We understand that clutter and debris can
                         detract from the beauty and functionality of your outdoor space, which is why we offer
                         comprehensive junk removal services to help you reclaim your yard.
                         <br><br>
-                        At R&S Flores Lawn Care LLC, we specialize in removing unwanted items and debris from
+                        At Lakeland, FL, we specialize in removing unwanted items and debris from
                         residential and commercial properties, ensuring your space remains clean and tidy. Whether
                         you're dealing with old furniture, appliances, yard waste, or construction debris, our
                         experienced team is equipped to handle the job with professionalism and care. With prompt
                         service, competitive pricing, and a commitment to customer satisfaction, you can count on R&S
                         Flores Lawn Care LLC to deliver exceptional junk removal services that exceed your expectations.
-                        Contact us today at +1 (404) 974-8399 to schedule your junk removal service and enjoy a
+                        Contact us today at +1 813-809-3317 to schedule your junk removal service and enjoy a
                         clutter-free outdoor space once again.
                     </p>
                     <div class="d-flex gap-2 flex-wrap">
@@ -814,10 +820,11 @@
                     <!-- Homepage Sections -->
                     <div class="footer-nav">
                         <p>
-                            5740 South Gordon Rd. <br>
-                            Austell, GA 30168
+                            Lakeland, FL <br>
+                            Lakeland, FL 30168
                             <br>
-                            <a class="text-decoration-underline text-secondary" title="RS Flores Directions" target="_blank"
+                            <a class="text-decoration-underline text-secondary" title="RS Flores Directions"
+                                target="_blank"
                                 href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">
                                 Get Directions
                             </a>
@@ -861,7 +868,7 @@
                         <!-- Phone Number -->
                         <p>
                             Main: <a class="text-white" title="Main R&S Flores Phone Number" href="tel:+14049748399">
-                                +1 (404) 974-8399</a>
+                                +1 813-809-3317</a>
                         </p>
 
                     </div>
