--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
     <title>
-        Contact Us | R&S Flores Lawn Care | Lakeland, FL
+        Contact Us | Company name Lawn Care | Lakeland, FL
     </title>
 
     <meta name="description"
@@ -46,18 +46,18 @@
                                 <i class="fa-solid fa-star"></i>
                             </p>
                         </div>
-                        <a class="text-decoration-underline text-white" title="R&S Flores Reviews" target="_blank"
+                        <a class="text-decoration-underline text-white" title="Company name Reviews" target="_blank"
                             href="https://www.google.com/search?q=R%26S+Flores+Lawn+Care+LLC.&oq=R%26S+Flores+Lawn+Care+LLC.&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQIRigATIHCAIQIRigATIHCAMQIRiSAzIHCAQQIRiSAzIHCAUQIRiSAzIHCAYQIRiSAzIHCAcQIRiSAzIHCAgQIRiSA9IBBzM1OGowajSoAgCwAgA&sourceid=chrome&ie=UTF-8#lrd=0x16b1cfbca210293:0x2bbe154cb02a59d3,1,,,,">
                             (12 Rating &
                             Reviews)</a>
                     </div>
 
                     <div class="d-flex align-items-center gap-2">
-                        <a title="R&S Flores Lawn Care Facebook Profile"
+                        <a title="Company name Lawn Care Facebook Profile"
                             href="https://www.facebook.com/landscapingfromthegroundupLLC/photos_by">
                             <i class="fa-brands fa-facebook fs-26 text-white"></i>
                         </a>
-                          <a title="R&S Flores Lawn Care Gmail" href="mailto:rsflores86@gmail.com">
+                          <a title="Company name Lawn Care Gmail" href="mailto:rsflores86@gmail.com">
                             <i class="fa-solid fa-envelope fs-26 text-white mx-2"></i>
                         </a>
                     </div>
@@ -74,7 +74,7 @@
                             <span>
                                 Lakeland, FL <br>
                                 Lakeland, FL 30168 <br>
-                                <a title="R&S Flores Location" class="text-decoration-underline fw-400 fs-18"
+                                <a title="Company name Location" class="text-decoration-underline fw-400 fs-18"
                                     target="_blank"
                                     href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">Get
                                     Directions
@@ -83,8 +83,8 @@
                         </p>
                     </div>
                     <div class="d-xl-block d-none">
-                        <a title="R&S Flores" href="/index.html"><img class="logo" src="/img/logo.png"
-                                alt="R&S Flores Logo"></a>
+                        <a title="Company name" href="/index.html"><img class="logo" src="/img/logo.png"
+                                alt="Company name Logo"></a>
                     </div>
                     <div class="text-md-end">
                         <a class="phone fw-500 gap-2" title="phone number" href="tel:+14049748399">
@@ -101,8 +101,8 @@
             <div class="container">
                 <!-- Logo Section (visible on extra large screens) -->
                 <div class="logo-section d-xl-none d-inline">
-                    <a title="R&S Flores Homepage Navigation" href="/index.html"><img class="logo" src="/img/logo.png"
-                            alt="R&S Flores"></a>
+                    <a title="Company name Homepage Navigation" href="/index.html"><img class="logo" src="/img/logo.png"
+                            alt="Company name"></a>
                 </div>
                 <!-- Navbar Toggler for mobile -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -116,8 +116,8 @@
                     <div class="offcanvas-header bg-light">
                         <!-- Logo Section (visible on extra large screens, within offcanvas) -->
                         <div class="logo-section mb-0 d-xl-none d-inline">
-                            <a title="R&S Flores" href="/index.html"><img class="logo" src="/img/logo.png"
-                                    alt="R&S Flores Canvas Logo"></a>
+                            <a title="Company name" href="/index.html"><img class="logo" src="/img/logo.png"
+                                    alt="Company name Canvas Logo"></a>
                         </div>
 
                         <!-- Close Button for offcanvas -->
@@ -131,7 +131,7 @@
                         <ul class="navbar-nav w-100 mb-2 mb-lg-0">
                             <!-- First Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="R&S Flores Homepage" href="/index.html">Home</a>
+                                <a class="nav-link" title="Company name Homepage" href="/index.html">Home</a>
                             </li>
                             <!-- Second Navigation -->
                             <li class="nav-item">
@@ -167,7 +167,7 @@
                             </li>
 
                             <!-- Call Now Button (visible on extra large screens, within offcanvas) -->
-                            <a title="Call R&S Flores Now"
+                            <a title="Call Company name Now"
                                 class="btn btn-primary d-xl-none d-flex justify-content-center col-12 mt-4 fs-17 text-uppercase py-3"
                                 href="tel:+14049748399">
                                 Call Now
@@ -223,7 +223,7 @@
 
                                 Lakeland, FL <br>
                                 Lakeland, FL 30168<br>
-                                <a title="Get RS Flores Directions" target="_blank"
+                                <a title="Get Company name Directions" target="_blank"
                                     href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">
                                     Get Directions
                                 </a>
@@ -238,7 +238,7 @@
                         </a>
 
                         <!-- Facebook -->
-                        <a class="unit" title="R&S Flores  Facebook Navigation" class=" d-flex align-items-center"
+                        <a class="unit" title="Company name  Facebook Navigation" class=" d-flex align-items-center"
                             target="_blank" href="https://www.facebook.com/landscapingfromthegroundupLLC/photos_by">
                             <i class="fs-24 fa-brands fa-facebook fs-28 me-3 text-white"></i>
                             Facebook
@@ -287,7 +287,7 @@
                             Lakeland, FL <br>
                             Lakeland, FL 30168
                             <br>
-                            <a class="text-decoration-underline text-secondary" title="RS Flores Directions"
+                            <a class="text-decoration-underline text-secondary" title="Company name Directions"
                                 target="_blank"
                                 href="https://www.google.com/maps/place/5740+South+Gordon+Rd+SW,+Austell,+GA+30168,+USA/@33.8145237,-84.6052862,17z/data=!3m1!4b1!4m6!3m5!1s0x88f5187e4579caa5:0xe23bdb12c47ec1e!8m2!3d33.8145237!4d-84.6027113!16s%2Fg%2F11c25fkh7k?entry=ttu">
                                 Get Directions
@@ -331,7 +331,7 @@
                     <div class="footer-nav">
                         <!-- Phone Number -->
                         <p>
-                            Main: <a class="text-white" title="Main R&S Flores Phone Number" href="tel:+14049748399">
+                            Main: <a class="text-white" title="Main Company name Phone Number" href="tel:+14049748399">
                                 +1 813-809-3317</a>
                         </p>
 
@@ -341,7 +341,7 @@
             <hr class="mt-4" />
 
             <p class="pt-2 pb-3 fw-500 text-white text-center border-1 border-top border-white pt-5">&copy;
-                R&S Flores 2024. All rights reserved.</p>
+                Company name 2024. All rights reserved.</p>
             <p class="pt-2 pb-3 fw-500 text-white text-center">The content available on this website is owned by us
                 and
                 our licensors. Copying any content, including images, without our consent is prohibited.</p>
