--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             <div class="container">
                 <!-- Logo Section (visible on extra large screens) -->
                 <div class="logo-section d-xl-none d-inline">
-                    <a title="LFTGU Lawn care Homepage Navigation" href="/index.html"><img class="logo" src="/img/logo.png"
-                            alt="LFTGU Lawn care"></a>
+                    <a title="LFTGU Lawn care Homepage Navigation" href="/index.html"><img class="logo"
+                            src="/img/logo.png" alt="LFTGU Lawn care"></a>
                 </div>
                 <!-- Navbar Toggler for mobile -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -514,22 +514,20 @@
                 <div class="info-div">
                     <p class="sub-header">Residential Services</p>
                     <h2 class="header">
-                        Reliable <span class="text-primary">Lawn Care For Homeowners</span> in Lakeland, FL
+                        Trimming and shaping existing shrubs that are overgrown and out of shape
                     </h2>
                     <p class="mb-4">
 
-                        For homeowners in Lakeland, FL LFTGU Lawn care offers trusted residential lawn services
-                        to ensure your outdoor space remains beautiful and well-maintained. With a focus on quality and
-                        customer satisfaction, we're committed to transforming your yard into a lush oasis you can be
-                        proud of.
+                        Welcome to LFTGU Lawn Care, where we specialize in transforming overgrown and messy shrubs into
+                        beautiful features for your yard. When shrubs grow too big or lose their shape, they can make
+                        your outdoor space look untidy.
                         <br><br>
-                        At Lakeland, FL, we understand that your home is your sanctuary, and we treat it
-                        with the care and attention it deserves. From regular lawn mowing to specialized services like
-                        tree trimming, mulching, and junk removal, our skilled team has the expertise and equipment to
-                        keep your lawn looking its best year-round. With reliable service, attention to detail, and a
-                        passion for exceeding expectations, you can trust Lakeland, FL to enhance the beauty
-                        and value of your home's outdoor space. Contact us today to schedule your
-                        residential lawn services and experience the difference for yourself.
+                        Our team is here to help. We carefully trim and shape each shrub to bring out its natural beauty
+                        and improve the overall appearance of your property. With attention to detail and a commitment
+                        to quality, we ensure your yard looks neat and well-maintained. Trust LFTGU Lawn Care to enhance
+                        your outdoor space with our professional shrub trimming services.
+
+ss
                     </p>
                     <div class="d-flex gap-2 flex-wrap">
                         <a title="Call Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600" href="tel:+14049748399">
@@ -545,7 +543,7 @@
 
                 <!-- Img Side -->
                 <div class="img-div bottom-right">
-                    <img style="object-position: center;" src="/img/car-house-lawn.jpg"
+                    <img style="object-position: center;" src="/img/about-us-2-inside.jpg"
                         alt="LFTGU Lawn care Residential Lawn Service">
                 </div>
             </div>
@@ -632,7 +630,8 @@
                 <p class="sub-header">What some of our happy customers are saying...</p>
                 <h3 class="header">Clients Testimonials</h3>
                 <p>
-                    See what our satisfied customers have to say about their experiences at LFTGU Lawn care Lawn Care. From
+                    See what our satisfied customers have to say about their experiences at LFTGU Lawn care Lawn Care.
+                    From
                     professionalism to affordable prices, our clients share their stories:
                 </p>
                 <div class="d-flex gap-2 flex-wrap mt-4">
@@ -870,7 +869,8 @@
                     <div class="footer-nav">
                         <!-- Phone Number -->
                         <p>
-                            Main: <a class="text-white" title="Main LFTGU Lawn care Phone Number" href="tel:+14049748399">
+                            Main: <a class="text-white" title="Main LFTGU Lawn care Phone Number"
+                                href="tel:+14049748399">
                                 +1 813-809-3317</a>
                         </p>
 
